Fix #24 - Show StmtUseDb.
Gave tooltips a min width, as otherwise they look odd for StmtUseDb nodes.
Only show Physical Operation / Logical Operation tooltip properties if @PhysicalOp / @LogicalOp are present.

--- a/css/qp.css
+++ b/css/qp.css
@@ -26,6 +26,7 @@ div[class|='qp-icon'] {
     border: 1px solid black;
     background-color: #FFFFEE;
     padding: 2px;
+    min-width: 10em;
 }
 
 .qp-tt div,
